orbstack/setup/002_argo_workflows/argo-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-server-ingress
  namespace: argo
  annotations:
    # cert-manager.io/cluster-issuer: self-signed
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: argo-workflows.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: argo-server
              port:
                number: 2746
    - host: argo-workflows.k8s.orb.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: argo-server
              port:
                number: 2746
  # tls:
  #   - secretName: https-cert
  #     hosts:
  #       - argo-workflows.127.0.0.1.nip.io
  #       - argo-workflows.local
